--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "High Limit Dash",
-  "short_name": "Dash",
+  "short_name": "Kubota High Limit Redraw Wheel",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#222222",
